--- a/app/assets/stylesheets/pages/_newtopicshow.scss
+++ b/app/assets/stylesheets/pages/_newtopicshow.scss
@@ -1,3 +1,16 @@
+
+.topicscontainer {
+  height: auto;
+  width: 91%;
+  margin: auto;
+  margin-top: 4em;
+}
+
+.containerTitle {
+  text-align: center;
+}
+
+
 .image-mosaic {
   display: grid;
   gap: 15px;
@@ -18,9 +31,9 @@
   align-items: center;
   background: #353535;
   font-family: 'Tenor Sans', sans-serif;
-  font-size: 3rem;
+  font-size: 2rem;
   color: #fff;
-  box-shadow: rgba(3, 8, 20, 0.1) 0px 0.15rem 0.5rem, rgba(2, 8, 20, 0.1) 0px 0.075rem 0.175rem;
+  // box-shadow: rgba(3, 8, 20, 0.1) 0px 0.15rem 0.5rem, rgba(2, 8, 20, 0.1) 0px 0.075rem 0.175rem;
   height: 100%;
   width: 100%;
   border-radius: 1px;
@@ -63,9 +76,9 @@
   transform: rotateY(-180deg);
 }
 
-.card-mosaic-side.front {
+// .card-mosaic-side.front {
 
-}
+// }
 
 .card-mosaic:hover .card-mosaic-side.front {
   transform: rotateY(180deg);
