--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -1,12 +1,9 @@
-<div class="container">
-  <div class="containerTitle row mt-2">
-    <div class="col-6">
+<div class="container topicscontainer">
+  <div class="containerTitle ">
       <h2>Choose your sources, be inCharge!</h2>
     </div>
-    <div class="col-6">
-      <%=link_to 'Back to topics', topics_path, class: "animated-border-button"%>
-    </div>
-  </div>
+
+
   <div class="image-mosaic">
     <div class="card-mosaic card-mosaic-tall card-mosaic-wide">
       <div class="card-mosaic-side front" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url('https://cdn.mos.cms.futurecdn.net/FaWKMJQnr2PFcYCmEyfiTm.jpg')">
