--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -17,7 +17,7 @@
                   <div class="navbar-search" id="search">
                 <%= form_tag tiles_all_path, method: :get do %>
 
-                <div class="input-group mb-3">
+                <div class="input-group mb-3 barquery">
                 <%= text_field_tag :query,
                     params[:query],
                     class: "form-control",
@@ -27,7 +27,7 @@
                   <%= submit_tag "Go", class: "btn btn-dark" %>
                   </div>
                 </div>
-                  
+
               <% end %>
           </div>
           </div>
