--- a/app/views/subscriptions/index.html.erb
+++ b/app/views/subscriptions/index.html.erb
@@ -35,7 +35,7 @@
    <form class="d-flex my-5 weathersearch" data-action="submit->weather#fetchWeather">
                 <input type="text" placeholder="enter city" class="form-control flex-grow-1" data-weather-target="input">
                 <a href="" class="position" data-action="click->weather#fetchWeatherByCoordinates"><i class="bi bi-geo-alt"></i></a>
-                <input type="submit" value="Search" class="btn btn-primary ms-3 btnWeather">
+                <input type="submit" value="Search" class="btn btn-dark ms-3 btnWeather">
               </form>
     </div>
      <div class="wthr-info">
