--- a/app/views/subtopics/index.html.erb
+++ b/app/views/subtopics/index.html.erb
@@ -1,15 +1,12 @@
-<div class="container">
+<div class="containerT">
   <div class="containerTitle row mt-2">
-    <div class="col-6">
-      <h2>Sub-topics</h2>
-    </div>
-    <div class="col-6">
-      <%=link_to 'Back to topics', topics_path, class: "animated-border-button"%>
+    <div class="col-12 topicpickers">
+      <h2>Pick your topics here:</h2>
     </div>
   </div>
   <div class="image-mosaic">
     <div class="card-mosaic card-mosaic-tall card-mosaic-wide">
-      <div class="card-mosaic-side front" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url('https://cdn.mos.cms.futurecdn.net/FaWKMJQnr2PFcYCmEyfiTm.jpg')">
+      <div class="card-mosaic-side front" style="background-image: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.3)), url('https://cdn.mos.cms.futurecdn.net/FaWKMJQnr2PFcYCmEyfiTm.jpg')">
           <div>Create your own tile here!</div>
       </div>
       <div class="card-mosaic-side back" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url('https://cdn.mos.cms.futurecdn.net/FaWKMJQnr2PFcYCmEyfiTm.jpg')">
@@ -29,7 +26,7 @@
     </div>
 
     <div class="card-mosaic card-mosaic-tall card-mosaic-flip">
-      <div class="card-mosaic-side front" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url('https://picsum.photos/id/566/800/530')">
+      <div class="card-mosaic-side front" style="background-image: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.3)), url('https://picsum.photos/id/566/800/530')">
         <div><%= @topics[0].title %></div>
       </div>
       <div class="card-mosaic-side back" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url('https://picsum.photos/id/566/800/530')">
@@ -46,7 +43,7 @@
     </div>
 
     <div class="card-mosaic card-mosaic-flip">
-      <div class="card-mosaic-side front" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url('https://picsum.photos/id/575/800/530')">
+      <div class="card-mosaic-side front" style="background-image: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.3)), url('https://picsum.photos/id/575/800/530')">
         <div><%= @topics[2].title %></div>
       </div>
       <div class="card-mosaic-side back" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url('https://picsum.photos/id/575/800/530')">
@@ -63,7 +60,7 @@
     </div>
 
     <div class="card-mosaic card-mosaic-flip">
-      <div class="card-mosaic-side front" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url('https://picsum.photos/id/626/800/530')">
+      <div class="card-mosaic-side front" style="background-image: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.3)), url('https://picsum.photos/id/626/800/530')">
         <div><%= @topics[3].title %></div>
       </div>
       <div class="card-mosaic-side back" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url('https://picsum.photos/id/626/800/530')">
@@ -80,7 +77,7 @@
     </div>
 
     <div class="card-mosaic card-mosaic-flip">
-      <div class="card-mosaic-side front" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url('https://picsum.photos/id/667/800/530')">
+      <div class="card-mosaic-side front" style="background-image: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.3)), url('https://picsum.photos/id/667/800/530')">
         <div><%= @topics[4].title %></div>
       </div>
       <div class="card-mosaic-side back" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url('https://picsum.photos/id/667/800/530')">
@@ -97,7 +94,7 @@
     </div>
 
     <div class="card-mosaic card-mosaic card-mosaic-flip">
-      <div class="card-mosaic-side front" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url('https://picsum.photos/id/678/800/530')">
+      <div class="card-mosaic-side front" style="background-image: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.3)), url('https://picsum.photos/id/678/800/530')">
         <div><%= @topics[5].title %></div>
       </div>
       <div class="card-mosaic-side back" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url('https://picsum.photos/id/678/800/530')">
@@ -114,7 +111,7 @@
     </div>
 
     <div class="card-mosaic card-mosaic-wide card-mosaic-flip">
-      <div class="card-mosaic-side front" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url('https://picsum.photos/id/695/800/530')">
+      <div class="card-mosaic-side front" style="background-image: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.3)), url('https://picsum.photos/id/695/800/530')">
         <div><%= @topics[6].title %></div>
       </div>
       <div class="card-mosaic-side back" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url('https://picsum.photos/id/695/800/530')">
@@ -131,7 +128,7 @@
     </div>
 
     <div class="card-mosaic card-mosaic card-mosaic-flip">
-      <div class="card-mosaic-side front" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url('https://picsum.photos/id/683/800/530')">
+      <div class="card-mosaic-side front" style="background-image: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.3)), url('https://picsum.photos/id/683/800/530')">
         <div><%= @topics[7].title %></div>
       </div>
       <div class="card-mosaic-side back" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url('https://picsum.photos/id/683/800/530')">
@@ -148,7 +145,7 @@
     </div>
 
     <div class="card-mosaic card-mosaic-wide card-mosaic-flip">
-      <div class="card-mosaic-side front" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url('https://picsum.photos/id/693/800/530')">
+      <div class="card-mosaic-side front" style="background-image: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.3)), url('https://picsum.photos/id/693/800/530')">
         <div><%= @topics[8].title %></div>
       </div>
       <div class="card-mosaic-side back" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url('https://picsum.photos/id/693/800/530')">
