updateed card imgs

--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -26,10 +26,10 @@
     </div>
 
     <div class="card-mosaic card-mosaic-tall card-mosaic-flip">
-      <div class="card-mosaic-side front" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url('https://picsum.photos/id/566/800/530')">
+      <div class="card-mosaic-side front" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url('https://elements-video-cover-images-0.imgix.net/files/220512242/Preview.jpg?auto=compress&crop=edges&fit=crop&fm=jpeg&h=800&w=1200&s=3702b1eeb3ed39c89cbef83a0ec2e371')">
         <div><%= @topics[0].title %></div>
       </div>
-      <div class="card-mosaic-side back" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url('https://picsum.photos/id/566/800/530')">
+      <div class="card-mosaic-side back" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url('https://elements-video-cover-images-0.imgix.net/files/220512242/Preview.jpg?auto=compress&crop=edges&fit=crop&fm=jpeg&h=800&w=1200&s=3702b1eeb3ed39c89cbef83a0ec2e371')">
         <div class="card-mosaic-text">
           <div class="container-sticky" id="tall">
             <dl class="sticky-stack">
@@ -60,10 +60,10 @@
     </div>
 
     <div class="card-mosaic card-mosaic-flip">
-      <div class="card-mosaic-side front" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url('https://picsum.photos/id/626/800/530')">
+      <div class="card-mosaic-side front" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url('https://embassies.gov.il/MFA/AboutIsrael/FactsIsrael/culture-dance.jpg')">
         <div><%= @topics[3].title %></div>
       </div>
-      <div class="card-mosaic-side back" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url('https://picsum.photos/id/626/800/530')">
+      <div class="card-mosaic-side back" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url('https://embassies.gov.il/MFA/AboutIsrael/FactsIsrael/culture-dance.jpg')">
         <div class="card-mosaic-text">
           <div class="container-sticky">
             <dl class="sticky-stack">
