--- a/app/assets/stylesheets/pages/_tilesindex.scss
+++ b/app/assets/stylesheets/pages/_tilesindex.scss
@@ -10,12 +10,14 @@
 }
 
 .big-card-text {
-  padding: 16px;
+  padding: 25px;
   display: flex;
   color: white;
   justify-content: space-between;
   align-items: center;
   flex-direction: column;
+  font-size: small;
+
 }
 
 .big-card > img {
