--- a/app/views/subscriptions/index.html.erb
+++ b/app/views/subscriptions/index.html.erb
@@ -2,11 +2,11 @@
 
 
   <% @subscriptions.each_with_index do |subscription, index| %>
+
     <% if subscription.tile.picture_url.nil? %>
       <div class="card-img topicsCard topicsCard-<%=index%>" style="background-image: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.3)), url(<%= cl_image_path subscription.tile.photos[0].key%>);">
     <% else %>
       <div class="card-img topicsCard topicsCard-<%=index%>" style="background-image: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.3)), url(<%= image_path subscription.tile.picture_url%>);">
-
     <% end %>
 
    <p class="topic-indicator"><%= subscription.tile.subtopic.title %></p>
@@ -14,10 +14,10 @@
     <h3><%#= subscription.tile.summary %></h3>
       <%#= cl_image_tag subscription.tile.photos[1].key %>
 
-        <small class="Unsubscribe"><%= link_to "Unsubscribe", subscription_path(subscription), method: :delete, data: { confirm: "Click OK to unsubscribe and pick a new topic for your feed!" }, class: "btn btn-ghost" %></small>
-        <%# <small class="read-more"><%= link_to "Read More", subscription_path(subscription), method: :get, class: "btn btn-ghost" %></small>
-    </div>
 
+    <div class="unsubscribe"><%= link_to subscription_path(subscription), method: :delete, data: { confirm: "Click OK to unsubscribe and pick a new topic for your feed!" } do %><img src="https://www.nicepng.com/png/full/52-521935_close-white-close-button-png.png" /><% end %></div>
+        <%# <small class="read-more"><%= link_to "Read More", subscription_path(subscription), method: :get, class: "btn btn-ghost" %></small>
+ </div>
      <% end %>
 
 
