--- a/app/views/tiles/all.html.erb
+++ b/app/views/tiles/all.html.erb
@@ -16,9 +16,13 @@
   </div>
   <div class="row">
     <% @tiles.each do |tile| %>
-      <div class="col-4">
-        <div class="big-card" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(<%= cl_image_path tile.photos[0].key%>);">
-          <div class="big-card-text">
+      <div class="col-4  mb-3">
+        <% if tile.picture_url.nil? %>
+          <div class="big-card" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(<%= cl_image_path tile.photos[0].key%>);">
+        <% else %>
+          <div class="big-card" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(<%= image_path tile.picture_url%>);">
+        <% end %>
+        <div class="big-card-text">
             <div class="big-card-text2" >
               <h2><%= tile.title %></h2>
             </div>
