--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,6 +1,8 @@
 .navbar-lewagon {
   justify-content: space-between;
   background: transparent;
+  white-space: nowrap;
+
 }
 
 .navbar-lewagon .navbar-collapse {
