--- a/app/assets/stylesheets/components/_subtopic_index.scss
+++ b/app/assets/stylesheets/components/_subtopic_index.scss
@@ -22,7 +22,7 @@
       text-decoration: none;
     }
       a:hover {
-        color: blue;
+        color: white;
         text-decoration: none;
       }
 }
